--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
-set(SRCS functions.cpp hash_md5.cpp K.cpp message_block.cpp)
+set(SRC_DIR "${CMAKE_SOURCE_DIR}/src")
+
+file(GLOB SRCS "${SRC_DIR}/*.cpp")
 
 add_library(md5 ${SRCS})
